# dgba

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml
mingw/: CMakeLists.txt
mingw/cmake/modules/: FindSDL2.cmake
src/: CMakeLists.txt  arm7tdmi.c  arm7tdmi.h  arm_instr.h  disassemble.c  disassemble.h  gba.c  gba_system.c  gba_system.h  gbabios.c  gbabios.h  gbabus.c  gbabus.h  gbamem.c  gbamem.h  gbarom.c  gbarom.h  io_register_sizes.h  ioreg_util.h  log.c  log.h  logtester.c  ppu.c  ppu.h  render.c  render.h  rom.c  rom.h  timer.c  timer.h  util.h
src/arm7tdmi/: CMakeLists.txt  arm7tdmi.c  arm7tdmi.h  arm_instr.h  block_data_transfer.c  block_data_transfer.h  branch.c  branch.h  data_processing.c  data_processing.h  halfword_data_transfer.c  halfword_data_transfer.h  shifts.c  shifts.h  sign_extension.c  sign_extension.h  single_data_transfer.c  single_data_transfer.h  software_interrupt.c  software_interrupt.h  status_transfer.c  status_transfer.h
src/arm7tdmi/arm_instr/: arm_instr.c  arm_instr.h  arm_software_interrupt.c  arm_software_interrupt.h  block_data_transfer.c  block_data_transfer.h  branch.c  branch.h  data_processing.c  data_processing.h  halfword_data_transfer.c  halfword_data_transfer.h  multiply.c  multiply.h  single_data_swap.c  single_data_swap.h  single_data_transfer.c  single_data_transfer.h  status_transfer.c  status_transfer.h
src/arm7tdmi/thumb_instr/: add_offset_to_stack_pointer.c  add_offset_to_stack_pointer.h  add_subtract.c  add_subtract.h  alu_operations.c  alu_operations.h  conditional_branch.c  conditional_branch.h  high_register_operations.c  high_register_operations.h  immediate_operations.c  immediate_operations.h  load_address.c  load_address.h  load_store.c  load_store.h  load_store_halfword.c  load_store_halfword.h  long_branch_link.c  long_branch_link.h  move_shifted_register.c  move_shifted_register.h  multiple_load_store.c  multiple_load_store.h  pc_relative_load.c  pc_relative_load.h  push_pop_registers.c  push_pop_registers.h  sp_relative_load_store.c  sp_relative_load_store.h  thumb_instr.c  thumb_instr.h  thumb_software_interrupt.c  thumb_software_interrupt.h  unconditional_branch.c  unconditional_branch.h
src/audio/: CMakeLists.txt  audio.c  audio.h
src/common/: CMakeLists.txt  log.c  log.h  util.h
src/contrib/: cflags.h
src/contrib/DUI/: DUI.h  DUI_font.h
src/graphics/: debug.c  debug.h  ppu.c  ppu.h  render.c  render.h
src/mem/: dma.c  dma.h  gbabios.c  gbabios.h  gbabus.c  gbabus.h  gbamem.c  gbamem.h  gbarom.c  gbarom.h  ioreg_names.h  ioreg_util.h  mgba_debug.c  mgba_debug.h
src/mem/backup/: eeprom.c  eeprom.h  flash.c  flash.h
src/mem/gpio/: gpio.c  gpio.h  rtc.c  rtc.h
tests/: CMakeLists.txt  test_arm.c  test_common.h  test_thumb.c
tests/gba-suite/: README.md
