cmake_minimum_required (VERSION 3.10)
SET(CMAKE_LIBRARY_ARCHITECTURE x86_64-w64-mingw32)
SET(CMAKE_PREFIX_PATH /usr/x86_64-w64-mingw32)
SET(MinGW TRUE)
SET(GBA_TARGET gba.exe)
ADD_COMPILE_OPTIONS(-Wall -O3 -DMinGW -march=native --target=x86_64-w64-mingw32)
ADD_LINK_OPTIONS(--target=x86_64-w64-mingw32)
project (GBA)
set(CMAKE_BUILD_TYPE Debug)
message("${CMAKE_CURRENT_LIST_DIR}/cmake/modules")
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/modules")
INCLUDE(CTest)
add_subdirectory(../src src)
add_subdirectory(../tests tests)
