add_executable(test_arm test_arm.c)
add_executable(test_thumb test_thumb.c)
target_link_libraries(test_arm core common arm7tdmi)
target_link_libraries(test_thumb core common arm7tdmi)
add_test(test_arm test_arm)
add_test(test_thumb test_thumb)
configure_file(gba-suite/arm.gba arm.gba COPYONLY)
configure_file(gba-suite/arm.log arm.log COPYONLY)
configure_file(gba-suite/thumb.gba thumb.gba COPYONLY)
